; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_log.c_LogXfer.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_log.c_LogXfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gMaxLogSize = common dso_local global i64 0, align 8
@gLogFileName = common dso_local global i32 0, align 4
@FOPEN_APPEND_TEXT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"  %s %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LogXfer(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* @gMaxLogSize, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %22

9:                                                ; preds = %2
  %10 = load i32, i32* @gLogFileName, align 4
  %11 = load i32, i32* @FOPEN_APPEND_TEXT, align 4
  %12 = call i32* @fopen(i32 %10, i32 %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %9
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @fprintf(i32* %16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %17, i8* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @fclose(i32* %20)
  br label %22

22:                                               ; preds = %8, %15, %9
  ret void
}

declare dso_local i32* @fopen(i32, i32) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
